--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
